Fix responsive problem on small screens

--- a/css/card-game.css
+++ b/css/card-game.css
@@ -1,4 +1,8 @@
 body {
-	text-align: center;
-	background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+  text-align: center;
+  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+}
+
+canvas {
+  max-width: 100%;
 }
